; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_multi_copy.c_MasterShardPlacementList.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_multi_copy.c_MasterShardPlacementList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NIL = common dso_local global i32* null, align 8
@masterConnection = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @MasterShardPlacementList to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @MasterShardPlacementList(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32*, i32** @NIL, align 8
  store i32* %4, i32** %3, align 8
  %5 = load i32*, i32** @masterConnection, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = call i32* @FinalizedShardPlacementList(i32 %8)
  store i32* %9, i32** %3, align 8
  br label %13

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = call i32* @RemoteFinalizedShardPlacementList(i32 %11)
  store i32* %12, i32** %3, align 8
  br label %13

13:                                               ; preds = %10, %7
  %14 = load i32*, i32** %3, align 8
  ret i32* %14
}

declare dso_local i32* @FinalizedShardPlacementList(i32) #1

declare dso_local i32* @RemoteFinalizedShardPlacementList(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
